--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.1"
+    "react-navigation-tabs": "^2.11.1",
+    "react-navigation": "4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
