--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.1",
-    "react-navigation": "4.1.1"
+    "react-navigation": "4.1.1",
+    "react-native-webview": "11.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
