--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -26,7 +27,6 @@
     "react-navigation": "4.1.1",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.1"
-    
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
